0.18.0 (UNRELEASED)
===================

Migrations:

  * declare_supported_languages for #2800.  Make sure you run this upgrade step
    with configuration profile 'opencore.configuration:default' or else rebuild
    to pick up changes!

Features Added:

  * The manage-team view now provides a "Write message to team" button which
    directs the user to his ISyncWithProjectMembership mailing list.  If the
    listen featurelet is not installed or there is no ISyncWithProjectMembership
    list within the project's lists container, the button will not be present.
    (Feature requested by Tom L.)

    A new @@contact-team view is registered on all IListenFeatureletInstalled
    objects to do the dynamic redirection. (egj)

  * IWikiHistory page history cache objects now have a resync_history_cache
    method that will resync the cache w/ the canonical history in the
    portal_repository tool. (rafrombrc)

  * submit-error-report now also includes the logged in user id, if
    any. (slinkp)

  * Member deletion now works, and has a link from the account page.
    (slinkp)

  * Added 'sortable_title' index (w/ associated ISortableTitle indexing
    adapter) to portal_catalog. (rafrombrc)

  * Added IMemberRegisteredEvent and IPortraitModifiedEvent events, firing
    them at the appropriate places. (rafrombrc)

  * Added support for optional 'include_time' argument to the pretty_date
    functions. (rafrombrc)

  * Wrapped status message div in a span tag with an id of
    'oc-statusMessage-container' to allow easy JS access to the entire
    status message portion of the DOM. (rafrombrc)

  * Email sender now includes the full name of the sender in the 'From:'
    header if we pass in a member id as the sender token. (rafrombrc)

  * Added IListenContainer interface to mark mailing list containers.
    (rafrombrc)

  * Added 'num_lists' method to the listen view to easily figure out how
    many mailing lists exist in a given project. (rafrombrc)
