@@ -9,6 +9,11 @@ Migrations:
 
 Features Added:
 
+  * You can now customize the blank slate template for new wiki pages within
+    a project more easily. Subclass and override opencore.nui.wiki.view.WikiEdit
+    with a custom blank_slate_content() method that returns the desired text.
+    (#2864) (egj) (feature requested by Pierre)
+
   * The manage-team view now provides a "Write message to team" button which
     directs the user to his ISyncWithProjectMembership mailing list.  If the
     listen featurelet is not installed or there is no ISyncWithProjectMembership
